--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 <body>
-<h1>TEST</h1>
-<p>"testing hosting with git</p>
+<h1>Lev Tumaykin</h1>
+<p>first website with git, navigational for each project</p>
+<a href="https://github.com/LevThePro/6681-Parking">parking project</a>
 </body>
 </html>
