--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1>Lev Tumaykin</h1>
 <p>first website with git, navigational for each project</p>
-<a href="https://github.com/LevThePro/6681-Parking">parking project</a>
+<a href="https://github.com/LevThePro/6681-Parking" target="_blank">parking project</a>
 </body>
 </html>
