--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>Lev Tumaykin</strong>
-					Portfolio<br />
+					\n Portfolio<br />
 				</div>
 			</header>
 
@@ -29,14 +29,14 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Feel free to take a look at all of my current projects below - <br />
-							or get to know me better through my socials or resume</h2>
+							<h2>Feel free to look at all of my current projects below<br />
+							Get to know me  through linked socials and resume</h2>
 						</header>
-						<p>I am a 3rd year Applied Math B.S. undergrad attending UC Santa Barbara, and am passionate about computer vision, machine learning, software dev and engineering,
+						<p>3rd year Applied Math B.S. undergrad attending UC Santa Barbara. I am passionate about computer vision, machine learning, software dev and engineering,
 							sustainability, and medicine. I am looking for opprotunities at the intersection of my passions, while my personal projects further my interests in each field,
-						 and help me gather skills that I hope will aid my in the workforce</p>
+						 and help me gather skills that I hope will aid my work</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More About Me</a></li>
+							<li><a href="github.com/LevThePro" class="button">Learn More About Me</a></li>
 						</ul>
 					</section>
 
@@ -439,10 +439,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="www.instagram.com/lev.tumaykin" class="icon brands fa-instagram"><span class="label">Twitter</span></a></li>
+						<li><a href="github.com/LevThePro" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="mailto:lev@tumaykin.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
