--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="www.instagram.com/lev.tumaykin" class="icon brands fa-instagram"><span class="label">Twitter</span></a></li>
+						<li><a href="www.instagram.com/lev.tumaykin" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="github.com/LevThePro" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="mailto:lev@tumaykin.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
